fix: make CORS allowed origins configurable via environment variable
Reads CORS_ALLOWED_ORIGINS from env (comma-separated).
Defaults to http://localhost:3000 for local dev.
Set https://chaenii.me,https://www.chaenii.me in ECS task definition.